--- a/client/v3/views/signup.html
+++ b/client/v3/views/signup.html
@@ -118,7 +118,7 @@
 
 <!--------------------- Submit button start --------------------->
 
-    <button class= "text-white p-2 m-2 w-4/12 bg-orange-400 rounded-full transition ease-in-out delay-100 hover:scale-110 hover:bg-orange-300">Sign up</button>
+    <button class= "text-orange-300 p-2 m-2 w-2/12 bg-transparent border-2 border-orange-300 rounded-full transition ease-in-out delay-100 hover:scale-110 hover:bg-orange-300 hover:text-white active:bg-orange-200">Create account!</button>
 
 <!--------------------- Submit button end --------------------->
 
