--- a/client/v3/views/signup.html
+++ b/client/v3/views/signup.html
@@ -12,17 +12,17 @@
 
 <body class="bg-slate-900">
 
-<!--------------------- Centered content start  --------------------->
+    <!--------------------- Centered content start  --------------------->
 
     <div class="h-screen flex flex-col items-center justify-center">
 
         <h1 class="text-3xl my-5 py-2 text-orange-300">Create an account</h1>
 
-    <!--------------------- Form start  --------------------->
+        <!--------------------- Form start  --------------------->
 
-        <form class="w-full max-w-lg">
+        <form action="../server/account/create-account.php" method="post" novalidate class="w-full max-w-lg">
 
-        <!--------------------- First and last name start  --------------------->
+            <!--------------------- First and last name start  --------------------->
 
             <div class="flex flex-wrap -mx-3 mb-4">
 
@@ -35,7 +35,10 @@
 
                     <input
                         class="appearance-none block w-full bg-slate-800 text-white rounded py-3 px-4 mb-3 leading-tight focus:outline-none focus:bg-slate-600 focus:placeholder:opacity-0"
-                        id="grid-first-name" type="text" placeholder="Jane">
+                        id="grid-first-name"
+                        name="f-name"
+                        type="text"
+                        placeholder="Jane">
                 </div>
 
                 <div class="w-full md:w-1/2 px-3 transition ease-in-out delay-100 hover:scale-110">
@@ -47,36 +50,41 @@
 
                     <input
                         class="appearance-none block w-full bg-slate-800 text-white border border-slate-800 rounded py-3 px-4 mb-3 leading-tight focus:outline-none focus:bg-slate-600 focus:placeholder:opacity-0"
-                        id="grid-last-name" type="text" placeholder="Doe">
+                        id="grid-last-name"
+                        name="l-name"
+                        type="text"
+                        placeholder="Doe">
                 </div>
 
             </div>
 
-        <!--------------------- First and last name end  --------------------->
+            <!--------------------- First and last name end  --------------------->
 
-        <!--------------------- Email start --------------------->
+            <!--------------------- Email start --------------------->
 
             <div class="flex flex-wrap -mx-3 mb-4">
 
                 <div class="w-full px-3 transition ease-in-out delay-100 hover:scale-110">
 
-                    <label class="block uppercase tracking-wide text-red-300 text-xs font-bold mb-2"
-                        for="grid-password">
+                    <label class="block uppercase tracking-wide text-red-300 text-xs font-bold mb-2" for="grid-email">
                         Email
                     </label>
 
                     <input
                         class="appearance-none block w-full bg-slate-800 text-white border border-slate-800 rounded py-3 px-4 mb-3 leading-tight focus:bg-slate-600 focus:outline-none focus:placeholder:opacity-0"
-                        id="grid-password" type="email" placeholder="example@email.com">
+                        id="grid-email"
+                        name="email"
+                        type="email"
+                        placeholder="example@email.com">
 
                 </div>
 
 
             </div>
 
-        <!--------------------- Email end --------------------->
+            <!--------------------- Email end --------------------->
 
-        <!--------------------- Password start  --------------------->
+            <!--------------------- Password start  --------------------->
 
             <div class="flex flex-wrap -mx-3 mb-4">
 
@@ -89,44 +97,52 @@
 
                     <input
                         class="appearance-none block w-full bg-slate-800 text-white border border-slate-800 rounded py-3 px-4 mb-3 leading-tight focus:bg-slate-600 focus:outline-none focus:placeholder:opacity-0"
-                        id="grid-password" type="password" placeholder="***********">
+                        id="grid-password"
+                        name="password"
+                        type="password"
+                        placeholder="***********">
 
                 </div>
 
                 <div class="w-full md:w-1/2 px-3 transition ease-in-out delay-100 hover:scale-110">
 
                     <label class="block uppercase tracking-wide text-purple-300 text-xs font-bold mb-2"
-                        for="grid-password">
+                        for="grid-repeat-password">
                         Repeat Password
                     </label>
 
                     <input
                         class="appearance-none block w-full bg-slate-800 text-white border border-slate-800 rounded py-3 px-4 mb-3 leading-tight focus:bg-slate-600 focus:outline-none focus:placeholder:opacity-0"
-                        id="grid-password" type="password" placeholder="***********">
+                        id="grid-repeat-password" 
+                        name="repeat-password"
+                        type="password" 
+                        placeholder="***********">
 
                 </div>
 
             </div>
 
-        <!--------------------- Password end  --------------------->
+            <!--------------------- Password end  --------------------->
+
+            <!--------------------- Submit button start --------------------->
+
+            <button
+                class="text-orange-300 p-2 m-2 w-1/2 item-center bg-transparent border-2 border-orange-300 rounded-full transition ease-in-out delay-100 hover:scale-110 hover:bg-orange-300 hover:text-white active:bg-orange-200">
+                Create account!</button>
+
+            <!--------------------- Submit button end --------------------->
 
         </form>
 
-        
 
-    <!--------------------- Form end  --------------------->
 
-<!--------------------- Submit button start --------------------->
+        <!--------------------- Form end  --------------------->
 
-    <button class= "text-orange-300 p-2 m-2 w-2/12 bg-transparent border-2 border-orange-300 rounded-full transition ease-in-out delay-100 hover:scale-110 hover:bg-orange-300 hover:text-white active:bg-orange-200">Create account!</button>
-
-<!--------------------- Submit button end --------------------->
-
-<p class="text-gray-500 text-xs my-2 py-2">Already have an account? Sign in!</p>
+        <p class="text-gray-500 text-xs my-2 py-2">Already have an account? Sign in!</p>
 
     </div>
 
-<!--------------------- Centered content end  --------------------->
+    <!--------------------- Centered content end  --------------------->
 
 </body>
 
