--- a/client/v3/views/signup.html
+++ b/client/v3/views/signup.html
@@ -11,9 +11,6 @@
 </head>
 
 <body class="bg-slate-900">
-
-    <!--------------------- Centered content start  --------------------->
-
     <div class="h-screen flex flex-col items-center justify-center">
 
         <h1 class="text-3xl my-5 py-2 text-orange-300">Create an account</h1>
@@ -26,7 +23,7 @@
 
             <div class="flex flex-wrap -mx-3 mb-4">
 
-                <div class="w-full md:w-1/2 px-3 mb-6 md:mb-0 transition ease-in-out delay-100 hover:scale-110">
+                <div class="w-full md:w-1/2 px-3 mb-6 md:mb-0 transition ease-in-out hover:scale-110">
 
                     <label class="block uppercase tracking-wide text-blue-300 text-xs font-bold mb-2"
                         for="grid-first-name">
@@ -36,12 +33,12 @@
                     <input
                         class="appearance-none block w-full bg-slate-800 text-white rounded py-3 px-4 mb-3 leading-tight focus:outline-none focus:bg-slate-600 focus:placeholder:opacity-0"
                         id="grid-first-name"
-                        name="f-name"
+                        name="f_name"
                         type="text"
                         placeholder="Jane">
                 </div>
 
-                <div class="w-full md:w-1/2 px-3 transition ease-in-out delay-100 hover:scale-110">
+                <div class="w-full md:w-1/2 px-3 transition ease-in-out hover:scale-110">
 
                     <label class="block uppercase tracking-wide text-green-300 text-xs font-bold mb-2"
                         for="grid-last-name">
@@ -51,7 +48,7 @@
                     <input
                         class="appearance-none block w-full bg-slate-800 text-white border border-slate-800 rounded py-3 px-4 mb-3 leading-tight focus:outline-none focus:bg-slate-600 focus:placeholder:opacity-0"
                         id="grid-last-name"
-                        name="l-name"
+                        name="l_name"
                         type="text"
                         placeholder="Doe">
                 </div>
@@ -64,7 +61,7 @@
 
             <div class="flex flex-wrap -mx-3 mb-4">
 
-                <div class="w-full px-3 transition ease-in-out delay-100 hover:scale-110">
+                <div class="w-full px-3 transition ease-in-out hover:scale-110">
 
                     <label class="block uppercase tracking-wide text-red-300 text-xs font-bold mb-2" for="grid-email">
                         Email
@@ -88,7 +85,7 @@
 
             <div class="flex flex-wrap -mx-3 mb-4">
 
-                <div class="w-full md:w-1/2 px-3 transition ease-in-out delay-100 hover:scale-110">
+                <div class="w-full md:w-1/2 px-3 transition ease-in-out hover:scale-110">
 
                     <label class="block uppercase tracking-wide text-yellow-200 text-xs font-bold mb-2"
                         for="grid-password">
@@ -104,7 +101,7 @@
 
                 </div>
 
-                <div class="w-full md:w-1/2 px-3 transition ease-in-out delay-100 hover:scale-110">
+                <div class="w-full md:w-1/2 px-3 transition ease-in-out hover:scale-110">
 
                     <label class="block uppercase tracking-wide text-purple-300 text-xs font-bold mb-2"
                         for="grid-repeat-password">
@@ -114,7 +111,7 @@
                     <input
                         class="appearance-none block w-full bg-slate-800 text-white border border-slate-800 rounded py-3 px-4 mb-3 leading-tight focus:bg-slate-600 focus:outline-none focus:placeholder:opacity-0"
                         id="grid-repeat-password" 
-                        name="repeat-password"
+                        name="r_password"
                         type="password" 
                         placeholder="***********">
 
@@ -127,23 +124,30 @@
             <!--------------------- Submit button start --------------------->
 
             <button
-                class="text-orange-300 p-2 m-2 w-1/2 item-center bg-transparent border-2 border-orange-300 rounded-full transition ease-in-out delay-100 hover:scale-110 hover:bg-orange-300 hover:text-white active:bg-orange-200">
+                class="text-orange-300 p-2 m-2 w-1/2 item-center bg-transparent border-2 border-orange-300 rounded-full transition ease-in-out hover:scale-110 hover:bg-orange-300 hover:text-white active:bg-orange-200">
                 Create account!</button>
 
             <!--------------------- Submit button end --------------------->
 
         </form>
 
-
-
         <!--------------------- Form end  --------------------->
+
+        <!-- 
+            Note that database variables are taken from the "name"
+            attribute in each form element's input. For easy reference
+            I've provided each variable's current name below, please
+            remember to change this comment if the name attribute changes.
+
+            f_name = First name
+            l_name = Last name
+            email = Email
+            password = Password
+            r_password = Repeat password
+        -->
 
         <p class="text-gray-500 text-xs my-2 py-2">Already have an account? Sign in!</p>
 
     </div>
-
-    <!--------------------- Centered content end  --------------------->
-
 </body>
-
 </html>
