Completed admin login system! Woo

--- a/client/v3/views/admin/signup-success.html
+++ b/client/v3/views/admin/signup-success.html
@@ -6,14 +6,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../../css/main.css">
-    <title>Document</title>
+    <title>Registration Successful!</title>
 </head>
+
 <body class="bg-slate-900">
     <div class="h-screen flex flex-col items-center justify-center">
         <h1 class="text-5xl text-orange-300">Registration successful!</h1>
 
-        <h2 class="text-3xl text-orange-200">
-            You can now <a href="../../views/login.php" class="no-underline hover:underline">log in.</a>
+        <h2 class="text-3xl text-orange-300">
+            You can now <a href="login.php" class="text-blue-300 hover:underline hover:text-blue-200">log in.</a>
         </h2>
         
     </div>
