Removed validator scripts

--- a/client/v3/views/admin/signup.html
+++ b/client/v3/views/admin/signup.html
@@ -7,8 +7,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
     <link rel="stylesheet" href="../../css/main.css">
-    <script src="https://unpkg.com/just-validate@latest/dist/just-validate.production.min.js" defer></script>
-    <script src="../../js/validation.js" defer></script>
     <title>Sign up</title>
 </head>
 
@@ -20,7 +18,7 @@
 
         <!--------------------- Form start  --------------------->
 
-        <form action="../../server/account/create-account.php" method="post" novalidate class="w-full max-w-lg">
+        <form action="../../server/account/create-account.php" method="post" class="w-full max-w-lg" id="signup" novalidate>
 
             <!--------------------- First and last name start  --------------------->
 
