More CSS changes goodnight zzz

--- a/client/v3/views/admin/signup-success.html
+++ b/client/v3/views/admin/signup-success.html
@@ -11,10 +11,11 @@
 
 <body class="bg-slate-900">
     <div class="h-screen flex flex-col items-center justify-center">
-        <h1 class="text-5xl text-orange-300">Registration successful!</h1>
+        <h1 class="my-3 text-5xl text-sky-100">Your account has been created!</h1>
 
-        <h2 class="text-3xl text-orange-300">
-            You can now <a href="login.php" class="text-blue-300 hover:underline hover:text-blue-200">log in.</a>
+        <h2 class="my-3 text-3xl text-sky-100">You can now 
+            <a href="login.php" class="text-blue-500 hover:underline hover:text-blue-600">log in</a>
+            or, alternatively, <a href="../index.php" class="text-blue-500 hover:underline hover:text-blue-600">head back home.</a>
         </h2>
         
     </div>
