--- a/client/v3/views/admin/signup.html
+++ b/client/v3/views/admin/signup.html
@@ -13,8 +13,8 @@
 <body class="bg-slate-900">
     <div class="h-screen flex flex-col items-center justify-center">
 
-        <h1 class="text-4xl mb-3 text-sky-300">Sign Up</h1>
-        <h2 class="text-xl mb-6 text-slate-300">Create new admin user account</h2>
+        <h1 class="text-4xl mb-3 text-sky-100">Sign Up</h1>
+        <h2 class="text-xl mb-6 text-sky-100">Create new admin user account</h2>
 
         <!--------------------- Form start  --------------------->
 
@@ -104,7 +104,7 @@
 
                 <div class="w-full md:w-1/2 px-3 transition ease-in-out hover:scale-110">
 
-                    <label class="block uppercase tracking-wide text-purple-300 text-xs font-bold mb-2"
+                    <label class="block uppercase tracking-wide text-blue-300 text-xs font-bold mb-2"
                         for="grid-repeat-password">
                         Repeat Password
                     </label>
@@ -126,7 +126,7 @@
 
             <div class="flex flex-col items-center justify-center">
                 <button
-                    class="text-sky-400 text-lg py-1.5 my-1 w-1/2 bg-transparent border-2 border-sky-300 rounded-full transition ease-in-out hover:scale-110 hover:bg-sky-400 hover:text-white active:bg-sky-300">
+                    class="text-sky-400 text-lg py-1.5 my-3 w-1/2 bg-transparent border-2 border-sky-300 rounded-full transition ease-in-out hover:scale-110 hover:bg-sky-400 hover:text-white active:bg-sky-300">
                     Submit</button>
             </div>
 
@@ -149,7 +149,7 @@
             r_password = Repeat password
         -->
 
-        <p class="text-slate-400 text-lg my-2 py-2">Already have an account? <a href="login.php" class="text-blue-400 hover:text-blue-500 hover:underline">Sign in.</a></p>
+        <p class="text-slate-400 text-lg my-2 py-3">Already have an account? <a href="login.php" class="text-blue-500 hover:text-blue-600 hover:underline">Sign in.</a></p>
 
     </div>
 </body>
