--- a/client/v3/views/contact-success.html
+++ b/client/v3/views/contact-success.html
@@ -10,11 +10,13 @@
 </head>
 <body class="bg-slate-900">
     <div class="h-screen flex flex-col items-center justify-center">
-        <h1 class="text-5xl text-orange-300">Message sent!</h1>
+        <h1 class="my-3 text-5xl text-sky-100">Your message has been sent!</h1>
 
-        <h2 class="text-3xl text-orange-300">
+        <h2 class="my-3 text-3xl text-sky-100">
             We'll be in touch within 1-3 business days.</a>
         </h2>
+
+        <a href="index.php" class="my-3 text-2xl text-blue-500 hover:underline hover:text-blue-600">Head back home.</a>
         
     </div>
 </body>
